--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -116,9 +116,10 @@ header {
     height: 15px;
     position: absolute;
     z-index: 2;
-    top: 20px;
+    top: 36px;
     right: 20px;
     cursor: pointer;
+    transition: all .3s;
     span {
         width: 100%;
         height: 2px;
