--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,7 @@ details summary::-webkit-details-marker {
     justify-content: center;
     align-items: center;
     transition: background-color .3s;
+    height: 48px;
     &:hover {
         background-color: #4a6893;
     }
@@ -383,4 +384,5 @@ details summary::-webkit-details-marker {
 @import '_order.scss';
 @import '_assessments.scss';
 @import '_programm.scss';
+@import '_modal.scss';
 @import '_media.scss';
