--- a/scss/_assessments.scss
+++ b/scss/_assessments.scss
@@ -68,7 +68,7 @@
         }
         .slick-arrow {
             position: absolute;
-            top: 0;
+            top: 22px;
             cursor: pointer;
             font-size: 1px;
             color: transparent;
