--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -238,6 +238,7 @@
                 cursor: pointer;
                 
                 position: relative;
+               
                 &::before {
                     content: '';
                     
@@ -249,6 +250,16 @@
                     position: absolute;
                     right: 32px;
                     top: 32px;
+                    transition: background-color .3s;
+                    &:hover {
+                        background-color: red;
+                    }
+                }
+                &:hover {
+                    &::before {
+                        background-color:  var(--grey-light);
+                    }
+                    
                 }
                 &::after {
                     content: '';
